Fusión del menú en mobile

--- a/curso_practico_javascript/index.html
+++ b/curso_practico_javascript/index.html
@@ -57,6 +57,49 @@
           </ul>
         </div>
       </div>
+
+      <section class="menu__container">
+        <div class="menu">
+          <div class="menu__listOne">
+    
+            <ul>
+              <li>Categories</li>
+              <li>
+                <a href="#">All</a>
+              </li>
+              <li>
+                <a href="#">Clothes</a>
+              </li>
+              <li>
+                <a href="#">Electronics</a>
+              </li>
+              <li>
+                <a href="#">Furnitures</a>
+              </li>
+              <li>
+                <a href="#">Toys</a>
+              </li>
+              <li>
+                <a href="#">Others</a>
+              </li>
+              <li>
+                <a href="#">My orders</a>
+              </li>
+              <li>
+                <a href="#">My account</a>
+              </li>
+            </ul>
+          </div>
+          <div class="menu__listTwo">
+            <p>camilayokoo@gmail.com</p>
+            <ul>
+              <li>
+                <a href="#" class="sign__out">Sign out</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </nav>
     <script src="./js/index.js"></script>
   </body>
