Fusión del carrito de compras

--- a/curso_practico_javascript/index.html
+++ b/curso_practico_javascript/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="navbar__account">
         <p>camilayokoo@gmail.com</p>
-        <a href="#">
+        <a href="#" id="navbar__cart">
           <img
             src="./assets/icons/icon_shopping_cart_notification.svg"
             alt="Icono de carrito de compras"
@@ -61,7 +61,6 @@
       <section class="menu__container">
         <div class="menu">
           <div class="menu__listOne">
-    
             <ul>
               <li>Categories</li>
               <li>
@@ -101,6 +100,101 @@
         </div>
       </section>
     </nav>
+    <section class="orden__container">
+      <div class="orden">
+        <h2><span>&lt;-</span>Shopping cart</h2>
+        <div class="orden__productos">
+          <div class="producto__item">
+            <div class="producto">
+              <img
+                src="./assets/images/estanteria.webp"
+                alt="Imagen del producto de una estanteria"
+              />
+              <p>Estantería</p>
+            </div>
+            <div class="producto__monto">
+              <p>$ 120,00</p>
+              <span></span>
+            </div>
+          </div>
+          <div class="producto__item">
+            <div class="producto">
+              <img
+                src="./assets/images/librero.webp"
+                alt="Imagen del producto de un librero"
+              />
+              <p>Librero</p>
+            </div>
+            <div class="producto__monto">
+              <p>$ 170,00</p>
+              <span></span>
+            </div>
+          </div>
+          <div class="producto__item">
+            <div class="producto">
+              <img
+                src="./assets/images/estanteria.webp"
+                alt="Imagen del producto de una estanteria"
+              />
+              <p>Estantería</p>
+            </div>
+            <div class="producto__monto">
+              <p>$ 120,00</p>
+              <span></span>
+            </div>
+          </div>
+          <div class="producto__item">
+            <div class="producto">
+              <img
+                src="./assets/images/librero.webp"
+                alt="Imagen del producto de un librero"
+              />
+              <p>Librero</p>
+            </div>
+            <div class="producto__monto">
+              <p>$ 170,00</p>
+              <span></span>
+            </div>
+          </div>
+          <div class="producto__item">
+            <div class="producto">
+              <img
+                src="./assets/images/estanteria.webp"
+                alt="Imagen del producto de una estanteria"
+              />
+              <p>Estantería</p>
+            </div>
+            <div class="producto__monto">
+              <p>$ 120,00</p>
+              <span></span>
+            </div>
+          </div>
+          <div class="producto__item">
+            <div class="producto">
+              <img
+                src="./assets/images/librero.webp"
+                alt="Imagen del producto de un librero"
+              />
+              <p>Librero</p>
+            </div>
+            <div class="producto__monto">
+              <p>$ 170,00</p>
+              <span></span>
+            </div>
+          </div>
+        </div>
+        <div class="shopping__sumatoria">
+          <div class="orden__concepto">
+            <p>Total</p>
+          </div>
+          <div class="orden__monto">
+            <p>$ 560.00</p>
+            <span></span>
+          </div>
+        </div>
+        <button class="shopping__checkout">Checkout</button>
+      </div>
+    </section>
     <script src="./js/index.js"></script>
   </body>
 </html>
