Lista de productos: HTML en JS a partir de arrays

--- a/curso_practico_javascript/index.html
+++ b/curso_practico_javascript/index.html
@@ -100,7 +100,7 @@
         </div>
       </section>
     </nav>
-    <section class="orden__container">
+    <section class="orden__container inactive">
       <div class="orden">
         <h2><span>&lt;-</span>Shopping cart</h2>
         <div class="orden__productos">
@@ -193,6 +193,10 @@
           </div>
         </div>
         <button class="shopping__checkout">Checkout</button>
+      </div>
+    </section>
+    <section class="home__container">
+      <div class="home__cards">
       </div>
     </section>
     <script src="./js/index.js"></script>
