Detalles de un producto

--- a/curso_practico_javascript/index.html
+++ b/curso_practico_javascript/index.html
@@ -199,6 +199,27 @@
       <div class="home__cards">
       </div>
     </section>
+    <aside class="detalle_producto--container inactive">
+      <div class="detalle_producto">
+        <div class="producto__image">
+          <img src="./assets/images/estanteria.webp" alt="Imagen del producto de una estanteria">
+          <span></span>
+          <div class="producto__puntos">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
+        <div class="producto__info">
+          <div class="producto__info__text">
+            <p>$ 120,00</p>
+            <h3>Estanteria moderna</h3>
+            <p>Esta estantería viene perfecto para habitaciones donde el espacio es reducido, pero se requiere de un mueble capaz de almacenar sus libros.</p>
+          </div>
+          <button class="add_cart"><span></span>Add to cart</button>
+        </div>
+      </div>
+    </aside>
     <script src="./js/index.js"></script>
   </body>
 </html>
